--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,18 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="color_gray">#66000000</color>
+    <color name="color_white">#FFFFFF</color>
+
+    <color name="colorPrimaryGreen">#008577</color>
+    <color name="colorPrimaryDarkGreen">#00574B</color>
+    <color name="colorAccentGreen">#D81B60</color>
+
+    <color name="colorPrimaryBlue">#2196f3</color>
+    <color name="colorPrimaryDarkBlue">#1976d2</color>
+    <color name="colorAccentBlue">#D81B60</color>
+
+    <color name="colorPrimaryRed">#ff5722</color>
+    <color name="colorPrimaryDarkRed">#e64a19</color>
+    <color name="colorAccentRed">#009688</color>
+
 </resources>
