--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,54 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="FabStyle" parent="Widget.Design.FloatingActionButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">?colorAccent</item>
+        <item name="layout_scrollFlags">scroll</item>
+        <item name="layout_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</item>
+        <item name="tint">@color/color_white</item>
     </style>
+
+    <style name="BottomBarStyle" parent="Widget.MaterialComponents.BottomAppBar">
+        <item name="android:layout_gravity">bottom</item>
+        <item name="backgroundTint">?bottomBarTint</item>
+        <item name="fabAlignmentMode">center</item>
+        <item name="hideOnScroll">true</item>
+        <item name="layout_behavior">com.google.android.material.bottomappbar.BottomAppBar$Behavior</item>
+        <item name="fabAnimationMode">slide</item>
+        <item name="layout_scrollFlags">scroll|enterAlways</item>
+    </style>
+
+    <style name="TextAppearance.AppCompat.Header">
+        <item name="android:textSize">@dimen/header_font_size</item>
+        <item name="android:textColor">?themeColorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.AppCompat.Simple">
+        <item name="android:textSize">@dimen/simple_font_size</item>
+        <item name="android:padding">@dimen/simple_text_padding</item>
+    </style>
+
+    <style name="ImageViewStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="TextInputStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="counterEnabled">true</item>
+        <item name="counterMaxLength">20</item>
+        <item name="endIconCheckable">true</item>
+        <item name="endIconMode">custom</item>
+    </style>
+
+    <style name="DividerStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
+
 </resources>
