--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,8 @@
         <item name="colorAccent">?themeColorAccent</item>
         <item name="bottomBarTint">?themeColorPrimary</item>
         <item name="fabTint">?colorAccent</item>
+        <item name="android:textColorPrimary">?colorOnPrimary</item>
+        <item name="android:textColorSecondary">?colorOnPrimary</item>
     </style>
 
 
@@ -14,17 +16,20 @@
         <item name="themeColorPrimary">@color/colorPrimaryGreen</item>
         <item name="themeColorPrimaryDark">@color/colorPrimaryDarkGreen</item>
         <item name="themeColorAccent">@color/colorAccentGreen</item>
+        <item name="colorOnPrimary">@color/color_white</item>
     </style>
 
     <style name="AppTheme.Blue">
         <item name="themeColorPrimary">@color/colorPrimaryBlue</item>
         <item name="themeColorPrimaryDark">@color/colorPrimaryDarkBlue</item>
         <item name="themeColorAccent">@color/colorAccentBlue</item>
+        <item name="colorOnPrimary">@color/color_white</item>
     </style>
 
     <style name="AppTheme.Red">
         <item name="themeColorPrimary">@color/colorPrimaryRed</item>
         <item name="themeColorPrimaryDark">@color/colorPrimaryDarkRed</item>
         <item name="themeColorAccent">@color/colorAccentRed</item>
+        <item name="colorOnPrimary">@color/color_white</item>
     </style>
 </resources>
