--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="color_gray">#66000000</color>
     <color name="color_white">#FFFFFF</color>
+    <color name="simpleTextColor">#AB000000</color>
+
 
     <color name="colorPrimaryGreen">#008577</color>
     <color name="colorPrimaryDarkGreen">#00574B</color>
