--- a/app/src/main/res/layout/fragment_earth_inner.xml
+++ b/app/src/main/res/layout/fragment_earth_inner.xml
@@ -6,24 +6,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <com.joesemper.pictureoftheday.util.EquilateralImageView
-        android:id="@+id/iv_earth"
-        style="@style/ImageViewStyle"
-        android:contentDescription="@string/earth_photo"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tv_caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.AppCompat.Simple"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_earth" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <com.joesemper.pictureoftheday.util.EquilateralImageView
+                android:id="@+id/iv_earth"
+                style="@style/ImageViewStyle"
+                android:contentDescription="@string/earth_photo"
+                app:layout_constraintBottom_toTopOf="@+id/tv_caption"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
+
+            <TextView
+                android:id="@+id/tv_caption"
+                style="@style/TextAppearance.AppCompat.Simple"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_earth" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
