--- a/app/src/main/res/layout/fragment_pod_detail.xml
+++ b/app/src/main/res/layout/fragment_pod_detail.xml
@@ -37,6 +37,7 @@
                 style="@style/TextAppearance.AppCompat.Header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_detail" />
